--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <!-- Hero Image -->
     <div class="imageheader">
-        <img src="images/imageheader.png" class="img-fluid" alt="Header Image of the name of the salon, Aqua" >
+        <img src="imageheader.png" class="img-fluid" alt="Header Image of the name of the salon, Aqua" >
     </div>
 
     <div class="container-fluid">
