--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container px-4">
         <a class="navbar-brand" href="#home">
-            <img src="images/aqualogo1.png" alt="Logo" class="navbar-logo" width="90" height="90">
+            <img src="aqualogo1.png" alt="Logo" class="navbar-logo" width="90" height="90">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
